--- a/ppLedc/ppLedc/Classes/Basic/Controller/Basic.storyboard
+++ b/ppLedc/ppLedc/Classes/Basic/Controller/Basic.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Basic View Controller-->
         <scene sceneID="9B5-lT-L7d">
             <objects>
-                <viewController id="OMs-0Z-DTU" sceneMemberID="viewController">
+                <viewController id="OMs-0Z-DTU" customClass="BasicViewController" customModule="ppLedc" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qdK-Ea-o2a">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
