--- a/ppLedc/ppLedc/Classes/Repeat/Controller/Repeat.storyboard
+++ b/ppLedc/ppLedc/Classes/Repeat/Controller/Repeat.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Repeat View Controller-->
         <scene sceneID="bM3-FF-anL">
             <objects>
-                <viewController id="oRm-vB-hIz" sceneMemberID="viewController">
+                <viewController id="oRm-vB-hIz" customClass="RepeatViewController" customModule="ppLedc" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e5d-aU-Ca3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
