--- a/ppLedc/ppLedc/Classes/Setting/Controller/Setting.storyboard
+++ b/ppLedc/ppLedc/Classes/Setting/Controller/Setting.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Setting View Controller-->
         <scene sceneID="nyT-Il-1iR">
             <objects>
-                <viewController id="htU-8g-KDG" sceneMemberID="viewController">
+                <viewController id="htU-8g-KDG" customClass="SettingViewController" customModule="ppLedc" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="t37-yE-VCE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,7 +29,7 @@
         <!--用户信息-->
         <scene sceneID="1b3-zf-ZIt">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WcK-Kq-0g4" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WcK-Kq-0g4" customClass="Set" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="用户信息" image="setting" id="C9W-bU-hFG"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Zi-qt-iZU">
