--- a/ppLedc/ppLedc/Classes/Setting/Controller/Setting.storyboard
+++ b/ppLedc/ppLedc/Classes/Setting/Controller/Setting.storyboard
@@ -29,7 +29,8 @@
         <!--用户信息-->
         <scene sceneID="1b3-zf-ZIt">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WcK-Kq-0g4" customClass="Set" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TNc-90-Vwy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WcK-Kq-0g4" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="用户信息" image="setting" id="C9W-bU-hFG"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Zi-qt-iZU">
@@ -41,7 +42,6 @@
                         <segue destination="htU-8g-KDG" kind="relationship" relationship="rootViewController" id="MmG-Hf-Foh"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TNc-90-Vwy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1066.6666666666667" y="612.72321428571422"/>
         </scene>
