--- a/ppLedc/ppLedc/Classes/Mine/Controller/AddViewController.xib
+++ b/ppLedc/ppLedc/Classes/Mine/Controller/AddViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,13 +23,19 @@
             <subviews>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入设备号" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yYD-O3-RBw">
                     <rect key="frame" x="107" y="433" width="200" height="30"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="bdR-Ug-zIf"/>
                         <constraint firstAttribute="width" constant="200" id="vKI-kg-gPl"/>
                     </constraints>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="alphabet"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
+                            <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="936-wL-fT8">
                     <rect key="frame" x="322" y="438" width="20" height="20"/>
@@ -75,7 +79,13 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="yYD-O3-RBw" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="1bA-Mh-wBs"/>
-                <constraint firstItem="yYD-O3-RBw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="290-kq-9YC"/>
+                <constraint firstItem="yYD-O3-RBw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="290-kq-9YC">
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                            <color key="value" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </constraint>
                 <constraint firstItem="zSD-cY-p4b" firstAttribute="leading" secondItem="936-wL-fT8" secondAttribute="trailing" constant="10" id="Cjx-q0-kA7"/>
                 <constraint firstItem="V4U-QL-Zg5" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ECF-be-zZi"/>
                 <constraint firstItem="yYD-O3-RBw" firstAttribute="leading" secondItem="RKp-al-DYn" secondAttribute="trailing" id="Qpr-i2-Keu"/>
@@ -86,6 +96,7 @@
                 <constraint firstItem="V4U-QL-Zg5" firstAttribute="top" secondItem="yYD-O3-RBw" secondAttribute="bottom" constant="15" id="r68-sT-B9V"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="132" y="143"/>
         </view>
     </objects>
     <resources>
